# ctfd

./: .gitignore  .pre-commit-config.yaml  README.adoc  pyproject.toml
ctfd/: __init__.py  common.py
ctfd/awards/: __init__.py  base.py
ctfd/challenges/: __init__.py  base.py
ctfd/client/: __init__.py  api_result.py  base.py  protos.py  utils.py
ctfd/comments/: __init__.py  base.py
ctfd/configs/: __init__.py  base.py  models.py
ctfd/files/: __init__.py  base.py
ctfd/flags/: __init__.py  base.py
ctfd/hints/: __init__.py  base.py
ctfd/notifications/: __init__.py  base.py
ctfd/pages/: __init__.py  base.py
ctfd/scoreboard/: __init__.py  base.py
ctfd/statistics/: __init__.py  base.py
ctfd/submissions/: __init__.py  base.py
ctfd/tags/: __init__.py  base.py
ctfd/teams/: __init__.py  base.py
ctfd/tokens/: __init__.py  base.py
ctfd/topics/: __init__.py  base.py
ctfd/unlocks/: __init__.py  base.py
ctfd/users/: __init__.py  base.py
tests/: test_ctfd.py
